deploy: 1efad5f2a6288b1913086ddc366c71219f72c2c8

--- a/ModulusBootstrapping1.html
+++ b/ModulusBootstrapping1.html
@@ -10,7 +10,7 @@
 </head><body>
    <!-- l. 614 --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicRotationofInputVectorSlots2.html'>prev</a>] [<a href='HomomorphicRotationofInputVectorSlots2.html#tailHomomorphicRotationofInputVectorSlots2.html'>prev-tail</a>] [<a href='#tailModulusBootstrapping1.html'>tail</a>] [<a href='BGVScheme.html#ModulusBootstrapping1.html'>up</a>] </p></div>
    <h4 class='subsectionHead' id='modulus-bootstrapping1'><span class='titlemark'>D-4.11   </span> <a id='x142-217000D-4.11'></a>Modulus Bootstrapping</h4>
-<!-- l. 617 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://eprint.iacr.org/2022/1363.pdf'>Bootstrapping for BGV and BFV Revisited</a>
+<!-- l. 617 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://eprint.iacr.org/2022/1363.pdf'>Bootstrapping for BGV and BFV Revisited</a> <span class='cite'>[<span class='rm-lmbx-10x-x-109'>?</span>]</span>
 </p><!-- l. 620 --><p class='indent'>   BGV’s bootstrapping shares some common aspects with both BFV and CKKS’s bootstrapping. The
 goal of BGV’s bootstrapping is the same as that of CKKS, but the internal technique is closer to
 that of BFV. Like CKKS, BGV’s bootstrapping resets the depleted ciphertext modulus from
