--- a/CiphertexttoCiphertextMultiplication1.html
+++ b/CiphertexttoCiphertextMultiplication1.html
@@ -10,7 +10,7 @@
 </head><body>
    <!-- l. 492 --><div class='crosslinks'><p class='noindent'>[<a href='HomomorphicKeySwitching3.html'>next</a>] [<a href='ModulusSwitch.html'>prev</a>] [<a href='ModulusSwitch.html#tailModulusSwitch.html'>prev-tail</a>] [<a href='#tailCiphertexttoCiphertextMultiplication1.html'>tail</a>] [<a href='BGVScheme.html#CiphertexttoCiphertextMultiplication1.html'>up</a>] </p></div>
    <h4 class='subsectionHead' id='ciphertexttociphertext-multiplication1'><span class='titlemark'>D-4.8   </span> <a id='x139-214000D-4.8'></a>Ciphertext-to-Ciphertext Multiplication</h4>
-<!-- l. 495 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference 1:  </span><a href='https://www.inferati.com/blog/fhe-schemes-bgv'>Introduction to the BGV encryption scheme</a>
+<!-- l. 495 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>- Reference:  </span><a href='https://www.inferati.com/blog/fhe-schemes-bgv'>Introduction to the BGV encryption scheme</a>
 </p><!-- l. 498 --><p class='indent'>   Since BGV uses a leveled ciphertext modulus chain like CKKS, BGV’s ciphertext-to-ciphertext
 multiplication scheme is exactly the same as CKKS’s scheme (Summary <a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication'>D-2.7<!-- tex4ht:ref: subsec:bfv-mult-cipher  --></a> in <a href='CiphertexttoCiphertextMultiplication.html#ciphertexttociphertext-multiplication'><span class='ts1-lmr10-x-x-109'>§</span>D-2.7<!-- tex4ht:ref: subsec:bfv-mult-cipher  --></a>), except for the
 rescaling step which uses BGV’s modulus switch (<a href='ModulusSwitch.html#modulus-switch1'><span class='ts1-lmr10-x-x-109'>§</span>D-4.7<!-- tex4ht:ref: subsec:bfv-mult-cipher  --></a>).
