--- a/RootsofUnityandCyclotomicPolynomialoverIntegerRing.html
+++ b/RootsofUnityandCyclotomicPolynomialoverIntegerRing.html
@@ -8,7 +8,7 @@
 <meta content='00-main.tex' name='src' /> 
  <script async='async' id='MathJax-script' src='https://cdn.jsdelivr.net/npm/mathjax@3/es5/mml-chtml.js' type='text/javascript'></script>  
 </head><body>
-   <!-- l. 411 --><div class='crosslinks'><p class='noindent'>[<a href='VectorandMatrix.html'>next</a>] [<a href='CyclotomicPolynomial.html'>prev</a>] [<a href='CyclotomicPolynomial.html#tailCyclotomicPolynomial.html'>prev-tail</a>] [<a href='#tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>tail</a>] [<a href='BasicMath.html#RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>up</a>] </p></div>
+   <!-- l. 412 --><div class='crosslinks'><p class='noindent'>[<a href='VectorandMatrix.html'>next</a>] [<a href='CyclotomicPolynomial.html'>prev</a>] [<a href='CyclotomicPolynomial.html#tailCyclotomicPolynomial.html'>prev-tail</a>] [<a href='#tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>tail</a>] [<a href='BasicMath.html#RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>up</a>] </p></div>
    <h3 class='sectionHead' id='roots-of-unity-and-cyclotomic-polynomial-over-integer-ring'><span class='titlemark'>A-9   </span> <a id='x31-40000A-9'></a>Roots of Unity and Cyclotomic Polynomial over Integer Ring</h3>
 <!-- l. 2 --><p class='noindent'>In <a href='RootsofUnity.html#roots-of-unity'><span class='ts1-lmr10-x-x-109'>§</span>A-7<!-- tex4ht:ref: subsec:coeff-rotation  --></a> and <a href='CyclotomicPolynomial.html#cyclotomic-polynomial'><span class='ts1-lmr10-x-x-109'>§</span>A-8<!-- tex4ht:ref: subsec:coeff-rotation  --></a>, we learned about the definition and properties of the
 <!-- l. 2 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>-th roots of unity and the
@@ -225,7 +225,7 @@ roots of the <!-- l. 39 --><math display='inline' xmlns='http://www.w3.org/1998/
 polynomial by computing <!-- l. 39 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>ω</mi></mrow><mrow><msup><mrow><mi>k</mi></mrow><mrow><mi>′</mi></mrow></msup>
   </mrow></msup></math>
 such that <!-- l. 39 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝗀𝖼𝖽</mtext></mstyle><mo class='MathClass-open' stretchy='false'>(</mo><msup><mrow><mi>k</mi></mrow><mrow><mi>′</mi></mrow></msup><mo class='MathClass-punc' stretchy='false'>,</mo><mi>μ</mi><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>1</mn></mrow></math>.
-</p><!-- l. 41 --><p class='indent'>   <a href='#the-roots-of-unity-and-cyclotomic-polynomials-over-x-c-vs-over-x-zp'>Table 2<!-- tex4ht:ref: subsec:coeff-rotation  --></a> compares the properties of the roots of unity and the
+</p><!-- l. 41 --><p class='indent'>   <a href='FHESchemeComparisonandSummary.html#the-roots-of-unity-and-cyclotomic-polynomials-over-x-c-vs-over-x-zp1'>Table 33<!-- tex4ht:ref: subsec:coeff-rotation  --></a> compares the properties of the roots of unity and the
 <!-- l. 41 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>μ</mi></math>-th cyclotomic polynomial
 over <!-- l. 41 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>X</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>ℂ</mi></mrow></math> (complex
 numbers) and over <!-- l. 41 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>X</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>ℤ</mi></mrow><mrow><mi>p</mi></mrow></msub></mrow></math>
@@ -237,7 +237,7 @@ numbers) and over <!-- l. 41 --><math display='inline' xmlns='http://www.w3.org/
    </div>
                                                                                          
                                                                                          
-   <!-- l. 417 --><div class='crosslinks'><p class='noindent'>[<a href='VectorandMatrix.html'>next</a>] [<a href='CyclotomicPolynomial.html'>prev</a>] [<a href='CyclotomicPolynomial.html#tailCyclotomicPolynomial.html'>prev-tail</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>front</a>] [<a href='BasicMath.html#RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>up</a>] </p></div>
-<!-- l. 417 --><p class='indent'>   <a id='tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'></a> </p> 
+   <!-- l. 418 --><div class='crosslinks'><p class='noindent'>[<a href='VectorandMatrix.html'>next</a>] [<a href='CyclotomicPolynomial.html'>prev</a>] [<a href='CyclotomicPolynomial.html#tailCyclotomicPolynomial.html'>prev-tail</a>] [<a href='RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>front</a>] [<a href='BasicMath.html#RootsofUnityandCyclotomicPolynomialoverIntegerRing.html'>up</a>] </p></div>
+<!-- l. 418 --><p class='indent'>   <a id='tailRootsofUnityandCyclotomicPolynomialoverIntegerRing.html'></a> </p> 
 </body> 
 </html>
