--- a/00-main.html
+++ b/00-main.html
@@ -1,3 +1,4 @@
+<span class='cmr-10x-x-109'>0    </span>
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
 <head> <title>The Beginner’s Textbook
