deploy: e27875c313d4ca41cc3413f02aeca90b79052d87

--- a/ModuloArithmetic1.html
+++ b/ModuloArithmetic1.html
@@ -15,7 +15,7 @@ modulo operations are as follows:
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-2'>     
 <div class='tcolorbox-title'>
-<!-- l. 58 --><p class='indent'>   <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem </span><a href='Definitions.html#definitions'><span class='rm-lmbx-10x-x-109'>A-2.1</span></a><span class='rm-lmbx-10x-x-109'>.1</span><!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
+<!-- l. 58 --><p class='indent'>   <!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-open' stretchy='false'>⟨</mo></mstyle></math><span class='rm-lmbx-10x-x-109'>Theorem </span><a href='Definitions.html#definitions'><span class='rm-lmbx-10x-x-109'>A-2.1</span><!-- tex4ht:ref: subsec:group-def  --></a><span class='rm-lmbx-10x-x-109'>.1</span><!-- l. 58 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle mathvariant='bold'><mo class='MathClass-close' stretchy='false'>⟩</mo></mstyle></math>
 <span class='rm-lmbx-10x-x-109'>Properties of Modulo Operations</span></p></div> 
 <div class='tcolorbox-content'><!-- l. 47 --><p class='noindent'>For any integer <!-- l. 47 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math>,
 the following is true:
@@ -228,13 +228,13 @@ is needed.
 of centered residue representation: in this algorithm design, we can simplify
 <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>μ</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>u</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math> to
 <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>μ</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>u</mi></mrow></math>, because we
-know that <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow><msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub>
+know that <!-- l. 162 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-bin' stretchy='false'>−</mo><mstyle displaystyle='true'><mfrac><mrow><msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub>
  </mrow><mrow><mn>2</mn> </mrow></mfrac></mstyle> <mo class='MathClass-rel' stretchy='false'>≤</mo><mi>μ</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>u</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow><msub><mrow><mi>b</mi></mrow><mrow><mi>α</mi></mrow></msub>
  </mrow><mrow><mn>2</mn> </mrow></mfrac></mstyle></mrow></math>.
                                                                                          
                                                                                          
 </p>
-   <!-- l. 366 --><div class='crosslinks'><p class='noindent'>[<a href='Overview.html'>prev</a>] [<a href='Overview.html#tailOverview.html'>prev-tail</a>] [<a href='ModuloArithmetic1.html'>front</a>] [<a href='ModuloArithmetic.html#ModuloArithmetic1.html'>up</a>] </p></div>
-<!-- l. 366 --><p class='indent'>   <a id='tailModuloArithmetic1.html'></a>  </p> 
+   <!-- l. 368 --><div class='crosslinks'><p class='noindent'>[<a href='Overview.html'>prev</a>] [<a href='Overview.html#tailOverview.html'>prev-tail</a>] [<a href='ModuloArithmetic1.html'>front</a>] [<a href='ModuloArithmetic.html#ModuloArithmetic1.html'>up</a>] </p></div>
+<!-- l. 368 --><p class='indent'>   <a id='tailModuloArithmetic1.html'></a>  </p> 
 </body> 
 </html>
