deploy: 3a6f524b8e444e3b39e91abe19a19acfde36584f

--- a/00-main.html
+++ b/00-main.html
@@ -1,3 +1,4 @@
+<span class='cmr-10x-x-109'>0    </span>
 <!DOCTYPE html> 
 <html lang='en-US' xml:lang='en-US'> 
 <head> <title>The Beginner’s Textbook
@@ -227,16 +228,16 @@ for Fully Homomorphic Encryption</h2>
 <br />   <span class='subsectionToc'>D-4.11 <a href='ModulusBootstrapping1.html#modulus-bootstrapping1' id='QQ2-142-239'>Modulus Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-5 <a href='RNSvariantFHESchemes.html#rnsvariant-fhe-schemes' id='QQ2-143-244'>RNS-variant FHE Schemes</a></span>
 <br />   <span class='subsectionToc'>D-5.1 <a href='FastBaseConversiontextsfFastBConv.html#fast-base-conversion-fastbconv' id='QQ2-144-245'>Fast Base Conversion: <span class='rm-lmss-10x-x-109'>FastBConv</span></a></span>
-<br />   <span class='subsectionToc'>D-5.2 <a href='RNSbasedModRaisetextsfModRaisetextsubscriptRNS.html#rnsbased-modraise-modraise-rns' id='QQ2-145-246'>RNS-based ModRaise: <span class='rm-lmss-10x-x-109'>ModRaise</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
-<br />   <span class='subsectionToc'>D-5.3 <a href='RNSbasedModDroptextsfModDroptextsubscriptRNS.html#rnsbased-moddrop-moddrop-rns' id='QQ2-146-247'>RNS-based ModDrop: <span class='rm-lmss-10x-x-109'>ModDrop</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
-<br />   <span class='subsectionToc'>D-5.4 <a href='RNSbasedModulusSwitchtextsfModSwitchtextsubscriptRNS.html#rnsbased-modulus-switch-modswitch-rns' id='QQ2-147-248'>RNS-based Modulus Switch: <span class='rm-lmss-10x-x-109'>ModSwitch</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
+<br />   <span class='subsectionToc'>D-5.2 <a href='RNSbasedModRaisetextsfModRaisetextsubscriptRNS.html#rnsbased-modraise-modraise-rns' id='QQ2-145-246'>RNS-based ModRaise: <span class='rm-lmss-10x-x-109'>ModRaise</span><sub class='textsubscript'><span class='rm-lmss-10'>RNS</span></sub></a></span>
+<br />   <span class='subsectionToc'>D-5.3 <a href='RNSbasedModDroptextsfModDroptextsubscriptRNS.html#rnsbased-moddrop-moddrop-rns' id='QQ2-146-247'>RNS-based ModDrop: <span class='rm-lmss-10x-x-109'>ModDrop</span><sub class='textsubscript'><span class='rm-lmss-10'>RNS</span></sub></a></span>
+<br />   <span class='subsectionToc'>D-5.4 <a href='RNSbasedModulusSwitchtextsfModSwitchtextsubscriptRNS.html#rnsbased-modulus-switch-modswitch-rns' id='QQ2-147-248'>RNS-based Modulus Switch: <span class='rm-lmss-10x-x-109'>ModSwitch</span><sub class='textsubscript'><span class='rm-lmss-10'>RNS</span></sub></a></span>
 <br />   <span class='subsectionToc'>D-5.5 <a href='RNSbasedDecryption.html#rnsbased-decryption' id='QQ2-148-250'>RNS-based Decryption</a></span>
 <br />   <span class='subsectionToc'>D-5.6        <a href='BGVsRNSbasedModulusSwitchtextsfModSwitchtextsfRNStextsfBGV.html#bgvs-rnsbased-modulus-switch-modswitch-rns-bgv' id='QQ2-149-253'>BGV’s        RNS-based        Modulus        Switch:
 <!-- l. 254 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖬𝗈𝖽𝖲𝗐𝗂𝗍𝖼𝗁</mtext></mstyle></mrow><mrow>
 <mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖱𝖭𝖲</mtext></mstyle></mrow><mrow><mstyle class='text'><mtext class='textsf' mathvariant='sans-serif'>𝖡𝖦𝖵</mtext></mstyle></mrow></msubsup></math></a></span>
 <br />   <span class='subsectionToc'>D-5.7 <a href='SmallMontgomeryReductionAlgorithmtextsfSmallMont.html#small-montgomery-reduction-algorithm-smallmont' id='QQ2-150-254'>Small Montgomery Reduction Algorithm: <span class='rm-lmss-10x-x-109'>SmallMont</span></a></span>
 <br />   <span class='subsectionToc'>D-5.8 <a href='ExactFastBaseConversiontextsfFastBConvEx.html#exact-fast-base-conversion-fastbconvex' id='QQ2-151-256'>Exact Fast Base Conversion: <span class='rm-lmss-10x-x-109'>FastBConvEx</span></a></span>
-<br />   <span class='subsectionToc'>D-5.9 <a href='DecomposingMultiplicationtextsfDecompMulttextsubscriptRNS.html#decomposing-multiplication-decompmult-rns' id='QQ2-152-257'>Decomposing Multiplication: <span class='rm-lmss-10x-x-109'>DecompMult</span><sub><span class='rm-lmss-10x-x-109'>RNS</span></sub></a></span>
+<br />   <span class='subsectionToc'>D-5.9 <a href='DecomposingMultiplicationtextsfDecompMulttextsubscriptRNS.html#decomposing-multiplication-decompmult-rns' id='QQ2-152-257'>Decomposing Multiplication: <span class='rm-lmss-10x-x-109'>DecompMult</span><sub class='textsubscript'><span class='rm-lmss-10'>RNS</span></sub></a></span>
 <br />   <span class='subsectionToc'>D-5.10 <a href='ApplyingRNSTechniquestoFHEOperations.html#applying-rns-techniques-to-fhe-operations' id='QQ2-153-258'>Applying RNS Techniques to FHE Operations</a></span>
 <br />   <span class='sectionToc'>D-6 <a href='FHESchemeComparisonandSummary.html#fhe-scheme-comparison-and-summary' id='QQ2-154-270'>FHE Scheme Comparison and Summary</a></span>
    </div>
