--- a/BFVScheme.html
+++ b/BFVScheme.html
@@ -79,10 +79,10 @@ make GLWE an RLWE.
    <div class='subsectionTOCS'>
    <span class='subsectionToc'>D-2.1 <a href='SingleValueEncoding.html#single-value-encoding'>Single Value Encoding</a></span>
 <br />   <span class='subsectionToc'>D-2.2 <a href='BatchEncoding.html#batch-encoding'>Batch Encoding</a></span>
-<br />   <span class='subsubsectionToc'>D-2.2.1 <a href='BatchEncoding.html#encoding-'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>1</span></sub></a></span>
-<br />   <span class='subsubsectionToc'>D-2.2.2 <a href='BatchEncoding.html#encoding-1'><span class='rm-lmss-10x-x-109'>Encoding</span><sub><span class='rm-lmss-10x-x-109'>2</span></sub></a></span>
-<br />   <span class='subsubsectionToc'>D-2.2.3 <a href='BatchEncoding.html#decoding-'><span class='rm-lmss-10x-x-109'>Decoding</span><sub><span class='rm-lmss-10x-x-109'>1</span></sub></a></span>
-<br />   <span class='subsubsectionToc'>D-2.2.4 <a href='BatchEncoding.html#decoding-1'><span class='rm-lmss-10x-x-109'>Decoding</span><sub><span class='rm-lmss-10x-x-109'>2</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.1 <a href='BatchEncoding.html#encoding-'><span class='rm-lmss-10x-x-109'>Encoding</span><sub class='textsubscript'><span class='rm-lmss-10'>1</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.2 <a href='BatchEncoding.html#encoding-1'><span class='rm-lmss-10x-x-109'>Encoding</span><sub class='textsubscript'><span class='rm-lmss-10'>2</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.3 <a href='BatchEncoding.html#decoding-'><span class='rm-lmss-10x-x-109'>Decoding</span><sub class='textsubscript'><span class='rm-lmss-10'>1</span></sub></a></span>
+<br />   <span class='subsubsectionToc'>D-2.2.4 <a href='BatchEncoding.html#decoding-1'><span class='rm-lmss-10x-x-109'>Decoding</span><sub class='textsubscript'><span class='rm-lmss-10'>2</span></sub></a></span>
 <br />   <span class='subsubsectionToc'>D-2.2.5 <a href='BatchEncoding.html#summary'>Summary</a></span>
 <br />   <span class='subsectionToc'>D-2.3 <a href='EncryptionandDecryption1.html#encryption-and-decryption1'>Encryption and Decryption</a></span>
 <br />   <span class='subsectionToc'>D-2.4 <a href='CiphertexttoCiphertextAddition.html#ciphertexttociphertext-addition'>Ciphertext-to-Ciphertext Addition</a></span>
