--- a/EncodingandDecoding.html
+++ b/EncodingandDecoding.html
@@ -196,8 +196,8 @@ encoding and decoding procedure (described in Summary <a href='BatchEncoding.ht
 complex vector <!-- l. 154 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-open' stretchy='false'>(</mo><msub><mrow><mi>v</mi></mrow><mrow><mn>0</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mn>1</mn></mrow></msub><mo class='MathClass-punc' stretchy='false'>,</mo><mo class='MathClass-rel' stretchy='false'>⋯</mo><mspace class='thinspace' width='0.17em'></mspace><mo class='MathClass-punc' stretchy='false'>,</mo><msub><mrow><mi>v</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msub><mo class='MathClass-close' stretchy='false'>)</mo> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msup><mrow><mi>ℂ</mi></mrow><mrow><mfrac><mrow><mi>n</mi></mrow>
 <mrow><mn>2</mn></mrow></mfrac> </mrow></msup></mrow></math>
-</p><!-- l. 156 --><p class='noindent'></p><hr />
-<!-- l. 158 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Encoding</span></span><span class='rm-lmbx-10x-x-109'>:</span>
+</p><!-- l. 156 --><p class='noindent'>_______________________________________________________________________________________________________________________________________________________________________________
+</p><!-- l. 158 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Encoding</span></span><span class='rm-lmbx-10x-x-109'>:</span>
 </p><!-- l. 160 --><p class='noindent'><!-- l. 160 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
    </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
 1.  </dt><dd class='enumerate-enumitem'>Convert (i.e., isomorphically transform) <!-- l. 163 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>v</mi></mrow><mo accent='true'>→</mo></mover></math>
@@ -263,8 +263,8 @@ complex vector <!-- l. 154 --><math display='inline' xmlns='http://www.w3.org/19
   <span class='rm-lmr-10'>during  the  encoding  process  causes  an  encoding  error,  which  makes  CKKS  an  approximate
     encryption scheme.</span>
     </dd></dl>
-<!-- l. 199 --><p class='noindent'></p><hr />
-<!-- l. 201 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Decoding</span></span><span class='rm-lmbx-10x-x-109'>:   </span>From  the  plaintext  polynomial
+<!-- l. 199 --><p class='noindent'>____________________________________________________________________________________________________________________________________
+</p><!-- l. 201 --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Decoding</span></span><span class='rm-lmbx-10x-x-109'>:   </span>From  the  plaintext  polynomial
 <!-- l. 201 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi><mi>M</mi> <mo class='MathClass-rel' stretchy='false'>=</mo><munderover accent='false' accentunder='false'><mrow> <mi class='MathClass-op'>∑</mi><mo> ⁡<!-- FUNCTION APPLICATION --></mo>
   </mrow><mrow><mi>i</mi><mo class='MathClass-rel' stretchy='false'>=</mo><mn>0</mn></mrow><mrow><mi>n</mi><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></munderover></mrow></math><!-- l. 201 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi><msub><mrow><mi>m</mi></mrow><mrow><mi>i</mi></mrow></msub><msup><mrow><mi>X</mi></mrow><mrow><mi>i</mi></mrow></msup></mrow></math>,
 recover <!-- l. 201 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi>m</mi></mrow><mo accent='true'>→</mo></mover> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi><mover accent='true'><mrow><mi>m</mi></mrow><mo accent='true'>→</mo></mover>
