deploy: fce29bd97def05cc2a430f03ba3dd3cf397e74fd

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ for Fully Homomorphic Encryption</h2>
      </p><!-- l. 288 --><p class='indent'>   <span class='rm-lmr-10'>These parts are designed in an incremental manner, and therefore understanding each part requires
      the understanding of its prior part(s).</span>
      </p><!-- l. 290 --><p class='indent'>   <!-- l. 290 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-     </p><!-- l. 292 --><p class='indent'>   <span class='rm-lmr-10'>This book is available as both an  </span><a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10'>Arxiv PDF</span></a> <span class='rm-lmr-10'>and a tentative  </span><a href='https://fhetextbook.github.io'><span class='rm-lmbx-10'>Website</span></a> <span class='rm-lmr-10'>(powered
+     </p><!-- l. 292 --><p class='indent'>   <span class='rm-lmr-10'>This book is available as both an  </span><a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10'>Arxiv PDF</span></a> <span class='rm-lmr-10'>and a  </span><a href='https://fhetextbook.github.io'><span class='rm-lmbx-10'>tentative website</span></a> <span class='rm-lmr-10'>(powered
      by  </span><a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'><span class='rm-lmr-10'>makt4ht</span></a><span class='rm-lmr-10'>). Please report any bugs or suggestions regarding the draft to the  </span><a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10'>Issues
      Board</span></a><span class='rm-lmr-10'>.</span>
 </p>
