deploy: 6a307870beff8aee1517383b287a346932dfe6b9

--- a/Preface.html
+++ b/Preface.html
@@ -21,14 +21,14 @@ logic gates (e.g., AND, OR, XOR, NAND, MUX), and even advanced mathematical func
 ReLU, sigmoid, and trigonometric functions (e.g., sin, cos). These functions can be implemented either as
 exact formulas or as approximations, depending on the trade-off between computational efficiency and
 accuracy.
-</p><!-- l. 268 --><p class='indent'>   Fully Homomorphic Encryption (FHE) enables privacy-preserving machine learning by allowing a
-server to process the client’s data in its encrypted form through an ML model. With FHE, the server
-learns neither the plaintext version of the input features nor the inference results. Only the client, using
-their secret key, can decrypt and access the results at the end of the service protocol. FHE can also be
-applied to confidential blockchain services, ensuring that sensitive data in smart contracts remains
+</p><!-- l. 268 --><p class='indent'>   FHE enables privacy-preserving machine learning by allowing a server to process the client’s data in
+its encrypted form through an ML model. With FHE, the server learns neither the plaintext version
+of the input features nor the inference results. Only the client, using their secret key, can
+decrypt and access the results at the end of the service protocol. FHE can also be applied to
+confidential blockchain services, ensuring that sensitive data in smart contracts remains encrypted
                                                                                          
                                                                                          
-encrypted and confidential while maintaining the transparency and integrity of the execution process.
+and confidential while maintaining the transparency and integrity of the execution process.
 Other applications of FHE include secure outsourcing of data analytics, encrypted database
 queries, privacy-preserving searches, efficient multi-party computation for digital signatures, and
 more.
