deploy: e22c244dbe7cac6a5e8c99c9ba206e2bfb3c7ee7

--- a/Preface.html
+++ b/Preface.html
@@ -52,8 +52,8 @@ book comprises the following four parts:
    schemes: TFHE, BFV, CKKS, and BGV, as well as their RNS-variant versions.</li></ul>
 <!--  l. 287  --><p class='indent'>   <!--  l. 287  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!--  l. 293  --><p class='indent'>   This book is available both as an  <a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10x-x-109'>arXiv PDF</span></a> and on a  <a href='https://fhetextbook.github.io'><span class='rm-lmbx-10x-x-109'>tentative website</span></a> (powered by  <a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'>make4ht</a>).
-Please report any bugs or suggestions regarding the draft to the  <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>. This book is an evolving
-open project, and we welcome FHE experts to join us as official collaborators to help perfect the
+Please report any bugs or suggestions regarding the draft to the  <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>. As this book is
+an open project, we welcome FHE experts to join us as collaborators and help expand the
 draft.
    
 </p>
